--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "google-generativeai>=0.5.0",
     "groq>=0.4.0",
     "huggingface-hub>=0.23.0",
+    "kaggle>=1.5.12",
     "langchain>=0.1.0",
     "langchain-community>=0.0.20",
     "matplotlib>=3.8.0",
@@ -19,10 +20,12 @@ dependencies = [
     "psycopg2-binary>=2.9.0",
     "pytest>=8.1.0",
     "python-dotenv>=1.0.0",
+    "python-multipart>=0.0.20",
     "scikit-learn>=1.4.0",
     "sqlalchemy>=2.0.0",
     "streamlit>=1.33.0",
     "tavily-python>=0.3.0",
+    "tensorflow>=2.15.0",
     "torch>=2.3.0",
     "torchvision>=0.18.0",
     "transformers>=4.40.0",
