--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,21 @@
+tensorflow>=2.15.0
 numpy>=1.26.0
 pandas>=2.2.0
 matplotlib>=3.8.0
 scikit-learn>=1.4.0
-torch>=2.3.0
-torchvision>=0.18.0
-transformers>=4.40.0  # For Hugging Face models
-huggingface-hub>=0.23.0
 fastapi>=0.110.0
-uvicorn>=0.29.0  # For running FastAPI
+uvicorn>=0.29.0
 streamlit>=1.33.0
 sqlalchemy>=2.0.0
-psycopg2-binary>=2.9.0  # For PostgreSQL; swap to mysql-connector-python for MySQL
-faiss-cpu>=1.8.0  # Vector DB (simple, local alternative to Pinecone)
+psycopg2-binary>=2.9.0
+faiss-cpu>=1.8.0
 langchain>=0.1.0
-langchain-community>=0.0.20  # For community integrations
-google-generativeai>=0.5.0  # For Gemini API
-groq>=0.4.0  # For Groq API
-tavily-python>=0.3.0  # For Tavily API
-boto3>=1.34.0  # For AWS services
-python-dotenv>=1.0.0  # For .env files
-pytest>=8.1.0  # For tests
+langchain-community>=0.0.20
+google-generativeai>=0.5.0
+groq>=0.4.0
+tavily-python>=0.3.0
+boto3>=1.34.0
+python-dotenv>=1.0.0
+pytest>=8.1.0
+kaggle>=1.5.12
+python-multipart
