--- a/docker/Dockerfile.frontend
+++ b/docker/Dockerfile.frontend
@@ -1,1 +1,21 @@
-# TODO: Dockerfile for Streamlit frontend
+```dockerfile
+# Use official Python image
+FROM python:3.10-slim
+
+# Set working directory
+WORKDIR /app
+
+# Copy requirements and install dependencies
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
+
+# Copy frontend code
+COPY frontend/ ./frontend/
+COPY models/classification/training_metrics.png ./models/classification/
+
+# Expose Streamlit port
+EXPOSE 8501
+
+# Command to run Streamlit
+CMD ["streamlit", "run", "frontend/app.py", "--server.port", "8501", "--server.address", "0.0.0.0"]
+```
