--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,11 +9,11 @@ dependencies = [
     "faiss-cpu>=1.8.0",
     "fastapi>=0.110.0",
     "google-generativeai>=0.5.0",
-    "groq>=0.4.0",
+    "groq>=0.2.0",
     "huggingface-hub>=0.23.0",
     "kaggle>=1.5.12",
     "langchain>=0.1.0",
-    "langchain-community>=0.0.20",
+    "langchain-community>=0.0.31",
     "matplotlib>=3.8.0",
     "numpy>=1.26.0",
     "pandas>=2.2.0",
@@ -22,10 +22,12 @@ dependencies = [
     "python-dotenv>=1.0.0",
     "python-multipart>=0.0.20",
     "scikit-learn>=1.4.0",
+    "sentence-transformers>=5.1.0",
     "sqlalchemy>=2.0.0",
     "streamlit>=1.33.0",
     "tavily-python>=0.3.0",
     "tensorflow>=2.15.0",
+    "tf-keras>=2.19.0",
     "torch>=2.3.0",
     "torchvision>=0.18.0",
     "transformers>=4.40.0",
