--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ sqlalchemy>=2.0.0
 psycopg2-binary>=2.9.0
 faiss-cpu>=1.8.0
 langchain>=0.1.0
-langchain-community>=0.0.20
+langchain-community>=0.0.31
 google-generativeai>=0.5.0
 groq>=0.4.0
 tavily-python>=0.3.0
@@ -19,3 +19,6 @@ python-dotenv>=1.0.0
 pytest>=8.1.0
 kaggle>=1.5.12
 python-multipart
+sentence-transformers
+tf-keras
+groq>=0.2.0
