--- a/docker/Dockerfile.api
+++ b/docker/Dockerfile.api
@@ -1,26 +1,12 @@
-```dockerfile
-# Use official Python image
 FROM python:3.10-slim
-
-# Set working directory
 WORKDIR /app
-
-# Copy requirements and install dependencies
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
-
-# Copy application code
 COPY api/ ./api/
 COPY rag/ ./rag/
-COPY data/ ./data/
+COPY data/knowledge_base.txt ./data/
+COPY data/embeddings/ ./data/embeddings/
 COPY models/ ./models/
-
-# Copy .env file
 COPY .env .
-
-# Expose FastAPI port
 EXPOSE 8000
-
-# Command to run FastAPI
 CMD ["uvicorn", "api.main:app", "--host", "0.0.0.0", "--port", "8000"]
-```
