--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,48 @@
+# Core ML and Data Science
 tensorflow>=2.15.0
 numpy>=1.26.0
 pandas>=2.2.0
 matplotlib>=3.8.0
 scikit-learn>=1.4.0
+Pillow>=10.0.0
+
+# Web Framework
 fastapi>=0.110.0
-uvicorn>=0.29.0
+uvicorn[standard]>=0.29.0
+python-multipart>=0.0.6
+
+# Frontend
 streamlit>=1.33.0
+
+# Database
 sqlalchemy>=2.0.0
-psycopg2-binary>=2.9.0
+mysql-connector-python>=8.0.0
+pymysql>=1.1.0
+
+# Vector Database and RAG
 faiss-cpu>=1.8.0
 langchain>=0.1.0
 langchain-community>=0.0.31
-google-generativeai>=0.5.0
+sentence-transformers>=2.2.0
+langchain-huggingface>=0.2.0
+
+# LLM Integration
 groq>=0.4.0
-tavily-python>=0.3.0
+google-generativeai>=0.5.0
+
+# AWS and Cloud
 boto3>=1.34.0
+
+# Utilities
 python-dotenv>=1.0.0
+requests>=2.31.0
+pathlib
+
+# Testing
 pytest>=8.1.0
-kaggle>=1.5.12
-python-multipart
-sentence-transformers
-tf-keras
-groq>=0.2.0
+pytest-asyncio>=0.21.0
+
+# Development
+black>=23.0.0
+flake8>=6.0.0
+mypy>=1.5.0
