--- a/docker/Dockerfile.api
+++ b/docker/Dockerfile.api
@@ -1,12 +1,20 @@
 FROM python:3.10-slim
+
 WORKDIR /app
+
+# Copy requirements first (for caching layers)
 COPY requirements.txt .
+
 RUN pip install --no-cache-dir -r requirements.txt
+
+# Copy only what API needs
 COPY api/ ./api/
 COPY rag/ ./rag/
 COPY data/knowledge_base.txt ./data/
 COPY data/embeddings/ ./data/embeddings/
 COPY models/ ./models/
 COPY .env .
+
 EXPOSE 8000
+
 CMD ["uvicorn", "api.main:app", "--host", "0.0.0.0", "--port", "8000"]
