--- a/docker/Dockerfile.frontend
+++ b/docker/Dockerfile.frontend
@@ -1,9 +1,15 @@
 FROM python:3.10-slim
+
 WORKDIR /app
+
 COPY requirements.txt .
+
 RUN pip install --no-cache-dir -r requirements.txt
+
+# Copy frontend + model artifacts needed
 COPY frontend/ ./frontend/
 COPY models/classification/training_metrics.png ./models/classification/
+
 EXPOSE 8501
+
 CMD ["streamlit", "run", "frontend/app.py", "--server.port", "8501", "--server.address", "0.0.0.0"]
-     
