--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,33 +1,36 @@
-version: '3.8'
 services:
   api:
     build:
-      context: .
+      context: ..
       dockerfile: docker/Dockerfile.api
+    container_name: api_service
     ports:
       - "8000:8000"
     volumes:
-      - ./data:/app/data
-      - ./models:/app/models
-      - ./.env:/app/.env
+      - ../data:/app/data
+      - ../models:/app/models
+      - ../.env:/app/.env
     environment:
       - PYTHONUNBUFFERED=1
     networks:
       - crop-advisor-network
+
   frontend:
     build:
-      context: .
+      context: ..
       dockerfile: docker/Dockerfile.frontend
+    container_name: frontend_service
     ports:
       - "8501:8501"
     volumes:
-      - ./models/classification:/app/models/classification
+      - ../models/classification:/app/models/classification
     depends_on:
       - api
     environment:
       - PYTHONUNBUFFERED=1
     networks:
       - crop-advisor-network
+
 networks:
   crop-advisor-network:
     driver: bridge
